--- a/css/style.css
+++ b/css/style.css
@@ -7,8 +7,11 @@ html {
 }
 
 body{
-  overflow: hidden;
   background-color: transparent;
+}
+
+.cc{
+  font-size: 50px;
 }
 
 .container-fluid{
@@ -34,9 +37,15 @@ body{
 }
 
 .branco{
-  background-color: white;
-  width: 100%;
-  height: 700px;
+  background-image: url('nature.jpg');
+  background-repeat: no-repeat;
+  background-size:100%;
+  bottom: 0;
+  left: 0;
+  position: absolute;
+  right: 0;
+  top: 0px;
+  background-color: rgb(255, 255, 255);
 }
 
 h1{
@@ -91,10 +100,8 @@ h1{
 }
 
 iframe{
-  width: 100%;
   margin-top: 55px;
-  margin-left: 10px;
-  height: 450px;
+  margin-left: 25%;
 }
 
 h1{
