--- a/css/style.css
+++ b/css/style.css
@@ -8,10 +8,40 @@ html {
 
 .navbar-inverse{
   padding: 5px 0 5px 0;
+  background-color: #666;
+  padding-left: 30%;
+  border-bottom: 1px solid rgb(8, 8, 8);
+}
+
+img.expanded{
+  max-width: none;
 }
 
 .logo{
   font-size: 50px;
+}
+
+.container{
+  width: 100%;
+}
+
+.titulo{
+  text-align: center;
+}
+
+.row{
+  padding-top: 20px;
+}
+
+iframe{
+  width: 100%;
+  height: 480px;
+  border: 0;
+  style: border:0;
+}
+
+textarea.form-control{
+  resize: none;
 }
 
 .body{
@@ -27,13 +57,6 @@ html {
   background-color: white;
 }
 
-.navbar-inverse{
-  margin-left: 30%;
-  background-color: transparent;
-  border-color: transparent;
-  border: 0;
-}
-
 .navbar-inverse .navbar-toggle{
   background-color: #333;
   border-color: #333;
@@ -47,6 +70,10 @@ html {
   color: black;
 }
 
+.botaosubmit a:hover{
+  color: white;
+}
+
 .navbar>.container .navbar-brand, .navbar>.container-fluid .navbar-brand{
   color: black;
 }
@@ -55,13 +82,7 @@ html {
   margin-top: 100px;
 }
 
-.right img{
-  width: 300px;
-  height: 300px;
-  border-radius: 300px;
-}
-
-.left img{
+.imgcom{
   width: 300px;
   height: 300px;
   border-radius: 300px;
@@ -89,6 +110,11 @@ html {
   text-align: center;
 }
 
+.top{
+  margin-top: 100px;
+  text-align: center;
+}
+
 .navbar-inverse .navbar-collapse, .navbar-inverse .navbar-form{
   border: 0;
 }
@@ -97,8 +123,53 @@ html {
   box-shadow: inset 0 0px 0 rgba(255,255,255,.1);
 }
 
-@media (max-width: 768px){
-  .navbar-inverse .navbar-collapse, .navbar-inverse .navbar-form{
-    background-color: white;
-  }
+input{
+  width: 100%;
+  margin-top: 5px;
+  padding: 5px;
+  font-family: 'Montserrat', sans-serif;
+  font-size: 16px;
+  overflow: hidden;
+}
+
+
+
+.botaosubmit{
+  margin: 20px auto auto auto;
+  width: 100px;
+  padding: 8px 0 8px 0;
+  display: block;
+  background-color: rgb(0, 0, 0);;
+  border-radius: 50px;
+  text-decoration: none;
+  color: rgb(255, 255, 255);
+}
+
+.item{
+  width:100%;
+}
+
+.carousel{
+  position: relative;
+  width: 60%;
+  margin: auto;
+  margin-bottom: 20px;
+}
+
+.carousel-inner>.item>a>img, .carousel-inner>.item>img{
+  width: 100%;
+  height: 500px;
+}
+
+
+
+@media (min-width: 768px){
+.navbar-inverse {
+    border: 0;
+    padding-right: 20%;
+    background-color: #666;
+    border-bottom: 1px solid rgb(8, 8, 8);
+    border-radius: 0;
+}
+
 }
