--- a/css/style.css
+++ b/css/style.css
@@ -100,6 +100,11 @@ textarea.form-control{
   text-align: center;
 }
 
+.right img{
+  width: 300px;
+  height: 300px;
+}
+
 .top{
   margin-top: 100px;
   text-align: center;
@@ -132,8 +137,6 @@ input{
   overflow: hidden;
 }
 
-
-
 .botaosubmit{
   margin: 20px auto auto auto;
   width: 100px;
@@ -161,6 +164,73 @@ input{
   height: 500px;
 }
 
+#myImg {
+    border-radius: 5px;
+    cursor: pointer;
+    transition: 0.3s;
+}
+
+#myImg:hover {opacity: 0.7;}
+
+.modal {
+    display: none;
+    position: fixed;
+    z-index: 1;
+    padding-top: 100px;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    background-color: rgb(0,0,0);
+    background-color: rgba(0,0,0,0.9);
+}
+
+.modal-content {
+    margin: auto;
+    display: block;
+    width: 80%;
+    max-width: 700px;
+}
+
+#caption {
+    margin: auto;
+    display: block;
+    width: 80%;
+    max-width: 700px;
+    text-align: center;
+    color: #ccc;
+    padding: 10px 0;
+    height: 150px;
+}
+
+.modal-content, #caption {
+    animation-name: zoom;
+    animation-duration: 0.6s;
+}
+
+@keyframes zoom {
+    from {transform:scale(0)}
+    to {transform:scale(1)}
+}
+
+.close {
+    position: absolute;
+    top: 15px;
+    right: 35px;
+    color: #f1f1f1;
+    font-size: 40px;
+    font-weight: bold;
+    transition: 0.3s;
+}
+
+.close:hover,
+.close:focus {
+    color: #bbb;
+    text-decoration: none;
+    cursor: pointer;
+}
+
 
 
 @media (min-width: 768px){
@@ -170,6 +240,10 @@ input{
     background-color: #666;
     border-bottom: 1px solid rgb(8, 8, 8);
     border-radius: 0;
+}
+
+.modal-content {
+    width: 100%;
 }
 
 }
